gcc/testsuite/rust/rustc/ui/typeck/issue-104582_dg.rs
fn main(){
    let my_var: String(String?);
// { dg-error ".E0214." "" { target *-*-* } .-1 }
// { dg-error ".E0214." "" { target *-*-* } .-2 }
}

